# policy-replay

./: AGENTS.md  README.md  policy_replay.py  pyproject.toml  requirements.txt  streamlit_app.py
data/history/: pjm_rpm_2018_2023.csv
decisions/: DEC-PR-001-translator-rubric.md
docs/: first-pr.md
eval/: sanity_bounds.py
reports/pjm-dec2025-replay/: replay_result.json  report.md
rules/: pjm-dec2025-capacity-reform.json
schemas/: replay_result.schema.json  rule.schema.json
scripts/: validate_schemas.py
specs/0001-foundation/: acceptance.md  design.md  requirements.md  tasks.md
specs/0002-design/: acceptance.md  design.md  requirements.md  tasks.md
src/policy_replay/: __init__.py  cli.py  loader.py  models.py  report.py  sim.py  translator.py  validation.py
tests/: test_policy_replay.py
